# OpenNof1

./: .gitignore  AGENT_TOOLS_SPEC.md  ARCHITECTURE.md  ENVIRONMENT.md  ENVIRONMENT_zh.md  README.md  README_zh.md  ROADMAP.md  quickstart.md  quickstart_zh.md  research.md
backend/: .env.example  .gitignore  README.md  analyze_position_closures.py  analyze_trading.py  clean_pycache.sh  detailed_closure_analysis.py  detailed_loss_analysis.py  main.py  profit_loss_analysis.py  pyproject.toml  requirements.txt  run.sh  test_api.sh
backend/agent/: models.py  scheduler.py  state.py  workflow.py
backend/agent/nodes/: __init__.py  analysis_node.py  save_analysis_node.py  trading_execution_node.py
backend/agent/tools/: __init__.py  analysis_tools.py  history_tools.py
backend/api/: main.py  routes.py
backend/config/: CONFIG_CLEANUP.md  agent.yaml  agent_config.py  providers.md  settings.py
backend/database/: __init__.py  database.py  models.py
backend/market/: api_client.py  data_cache.py  types.py  websocket_client.py
backend/scripts/: README.md  debug_positions.py  test_agent_trading.py  test_futures_trading.py  test_natr.py  test_position_matching.py  test_simple_agent.py
backend/scripts/analysis/: README.md
backend/services/: prompt_service.py
backend/trading/: __init__.py  binance_futures.py  history_service.py  interface.py  position_service.py
backend/utils/: logger.py  timezone_utils.py
checklists/: requirements.md
contracts/: api.md
frontend/: README.md  next.config.js
frontend/src/: middleware.ts
specs/001-agent-trading-system/: plan.md  (+3 more)
(+7 files in other folders)
